Bug 273144 - Crash after recieve a file
Summary: Crash after recieve a file
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-12 18:24 UTC by hector
Modified: 2011-10-07 20:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.6
Sentry Crash Report:


Attachments
message error (58.39 KB, image/png)
2011-06-10 16:33 UTC, hector
Details

Note You need to log in before you can comment on or make changes to this bug.
Description hector 2011-05-12 18:24:42 UTC
Application: bluedevil-helper (0.1)
KDE Platform Version: 4.6.2 (4.6.2)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-9-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
-Crash and bug error after recieved a file (3gp, 4,1MB) from my phone with bluetooth

-- Backtrace:
Application: Programma di supporto per la ricezione di file via Bluetooth (bluedevil-helper), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f7d80ad0780 (LWP 1862))]

Thread 3 (Thread 0x7f7d6ff78700 (LWP 7729)):
#0  0x00007f7d7dd81f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f7d7aa69104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7d7aa69639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7d7e4c9446 in QEventDispatcherGlib::processEvents (this=0x7f7d680008b0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f7d7e49d882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f7d7e49dabc in QEventLoop::exec (this=0x7f7d6ff77dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f7d7e3b4924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f7d7e47fc2f in QInotifyFileSystemWatcherEngine::run (this=0x2068e80) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f7d7e3b7175 in QThreadPrivate::start (arg=0x2068e80) at thread/qthread_unix.cpp:320
#9  0x00007f7d7af34d8c in start_thread (arg=0x7f7d6ff78700) at pthread_create.c:304
#10 0x00007f7d7dd8f04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f7d6d3e3700 (LWP 7734)):
#0  0x00007f7d7dd81f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f7d7aa69104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f7d7aa69639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f7d7e4c9446 in QEventDispatcherGlib::processEvents (this=0x2487970, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007f7d7e49d882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f7d7e49dabc in QEventLoop::exec (this=0x7f7d6d3e2dd0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007f7d7e3b4924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007f7d7e47fc2f in QInotifyFileSystemWatcherEngine::run (this=0x24bbde0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f7d7e3b7175 in QThreadPrivate::start (arg=0x24bbde0) at thread/qthread_unix.cpp:320
#9  0x00007f7d7af34d8c in start_thread (arg=0x7f7d6d3e3700) at pthread_create.c:304
#10 0x00007f7d7dd8f04d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f7d80ad0780 (LWP 1862)):
[KCrash Handler]
#6  isSignalConnected (sender=0x1fac4e0, m=<value optimized out>, local_signal_index=0, argv=0x7fff9f31aa40) at kernel/qobject_p.h:226
#7  QMetaObject::activate (sender=0x1fac4e0, m=<value optimized out>, local_signal_index=0, argv=0x7fff9f31aa40) at kernel/qobject.cpp:3210
#8  0x00007f7d7eb81b8f in KJob::finished (this=<value optimized out>, _t1=0x1fac4e0) at ./kjob.moc:173
#9  0x00007f7d7eb81d65 in KJob::emitResult (this=0x1fac4e0) at ../../kdecore/jobs/kjob.cpp:310
#10 0x000000000040c9d8 in _start ()

Reported using DrKonqi
Comment 1 Alex Fiestas 2011-06-09 19:18:43 UTC
I can't reproduce this bug, can you?

What were the exact steps you did? does it happend with other files than 3gp?

Thanks.
Comment 2 hector 2011-06-10 16:33:48 UTC
Created attachment 60867 [details]
message error
Comment 3 Alex Fiestas 2011-10-07 20:39:05 UTC
Git commit a0022db3ef10716be7e9393f6bc5679755ce36db by Alex Fiestas.
Committed on 07/10/2011 at 22:36.
Pushed by afiestas into branch '1.1'.

Do not report unstranslatable technical errors

BUG: 273144
BUG: 274772

FIXED-IN: 1.0.6
FIXED-IN: 1.1.3
FIXED-IN: 1.2.2

M  +0    -1    src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp

http://commits.kde.org/bluedevil/a0022db3ef10716be7e9393f6bc5679755ce36db
Comment 4 Alex Fiestas 2011-10-07 20:39:15 UTC
Git commit 12d0a54f2a5ccaffbe3844d24dbbbbfa746ce95e by Alex Fiestas.
Committed on 07/10/2011 at 22:36.
Pushed by afiestas into branch '1.0'.

Do not report unstranslatable technical errors

BUG: 273144
BUG: 274772

FIXED-IN: 1.0.6
FIXED-IN: 1.1.3
FIXED-IN: 1.2.2

M  +0    -1    src/daemon/helpers/filereceiver/openobex/filetransferjob.cpp

http://commits.kde.org/bluedevil/12d0a54f2a5ccaffbe3844d24dbbbbfa746ce95e