Do not report unstranslatable technical errors

BUG: 273144
BUG: 274772

FIXED-IN: 1.0.6
FIXED-IN: 1.1.3
FIXED-IN: 1.2.2